se optimizaron librerias, se agregó material-bootsrap

--- a/css/sass/style.scss
+++ b/css/sass/style.scss
@@ -41,3 +41,16 @@ Text Domain: shbase
 -------------------------------------------------------------- */
 
 
+
+  #dropdown-menu h2 {
+    padding: 14px;
+    margin: 0;
+    font-size: 16px;
+    font-weight: 400;
+  }
+  #dropdown-menu .sample {
+    width: 200px;
+  }
+  #dropdown-menu .form-group {
+    margin: 30px 0;
+  }
