--- a/css/sass/_global.scss
+++ b/css/sass/_global.scss
@@ -29,6 +29,10 @@ a:hover {
 	color: $link-hover-color;	
 	text-decoration: none;
 }
+.main {
+	padding-top: $header-height;
+}
+
 
 /* = Utilidades
 ----------------------------------------------- */
