--- a/css/sass/style.scss
+++ b/css/sass/style.scss
@@ -30,6 +30,7 @@ Text Domain: shbase
 ------------------------------------------*/
 @import "_global.scss";
 @import "_header.scss";
+@import "_nav.scss";
 @import "_footer.scss";
 @import "_forms.scss";
 @import "_redes_sociales.scss";
