--- a/css/sass/_global.scss
+++ b/css/sass/_global.scss
@@ -30,9 +30,11 @@ a:hover {
 	text-decoration: none;
 }
 .main {
-	padding-top: $header-height;
+	// padding-top: $header-height;
 }
-
+h1, h2, h3, h4, h5, h6 {
+	font-family: $main-font;
+}
 
 /* = Utilidades
 ----------------------------------------------- */
@@ -61,8 +63,9 @@ a:hover {
 		width: 100%;
 	}
 }
-.u-contenedor-completo {
-
+.u-contenedorCompleto {
+	width: 100%;
+	
 }
 
 /* = Contenido
