--- a/css/sass/_header.scss
+++ b/css/sass/_header.scss
@@ -8,7 +8,8 @@
 	clear: both;
 	display: block;
 	height: $header-height;
-	background: $header-bg;
+	// background: $header-bg;
+	background: none;
 	margin: 0 auto;
 	z-index: 99;
 	position: fixed;
@@ -18,11 +19,18 @@
 	
 	@media (max-width: $desktop-width) {
 		height: auto;
-		position: relative;
+		background: none;
+
+		&--tiny { position: relative; }
+	}
+
+	@media (max-width: $tablet-width) {
+		position: relative;		
 	}
 
 	&--tiny {
 		height: 60px;
+		background: $header-bg;
 	}
 	
 	.Header-contenido {
