--- a/css/sass/style.scss
+++ b/css/sass/style.scss
@@ -30,13 +30,16 @@ Text Domain: shbase
 ------------------------------------------*/
 @import "_global.scss";
 @import "_header.scss";
-@import "_nav.scss";
 @import "_footer.scss";
 @import "_forms.scss";
-@import "_redes_sociales.scss";
 
 /* Bloques 
 ------------------------------------------*/
+@import "blocks/_cover.scss";
+@import "blocks/_nav.scss";
+@import "blocks/_redes_sociales.scss";
+
+
 
 /* La personalización directa comienza aquí
 -------------------------------------------------------------- */
