--- a/css/sass/blocks/_cover.scss
+++ b/css/sass/blocks/_cover.scss
@@ -3,6 +3,14 @@
 /*------------------------------------------------*/
 
 .PrimalCover {
+	background-position: center top;
+	background-size: 100%;
+	background-attachment: fixed;
+	background-repeat: no-repeat;
+
+	@media (max-width: $tablet-width) {
+			background-size: auto;
+	}
 
 	.PrimalCover-contenido {
 		padding-top: $header-height;
@@ -12,7 +20,7 @@
 		height: 99vh; 
 
 		@media (max-width: $tablet-width) {
-			height: auto;	
+			height: auto;
 			display: inline-block;
 			padding-top: 1rem;
 		}
@@ -32,7 +40,7 @@
 				text-align: center;
 			}
 			.PrimalCover-titulo {
-				color: #fff;
+				color: $support-color;
 				font-size: 3rem;
 				font-weight: bold;
 				text-shadow: 2px 2px 2px rgba(0,0,0,0.5);
