--- a/css/sass/blocks/_nav.scss
+++ b/css/sass/blocks/_nav.scss
@@ -70,6 +70,7 @@
 		padding: 0px .8em;
 		text-decoration: none;
 		font-size: 1.15rem;
+		margin: 0 .25rem;
 		@include redondea(4px);
 		@include transicion(0.25s);
 
