--- a/css/sass/style.scss
+++ b/css/sass/style.scss
@@ -37,6 +37,7 @@ Text Domain: shbase
 ------------------------------------------*/
 @import "blocks/_cover.scss";
 @import "blocks/_blocks.scss";
+@import "blocks/_testimony.scss";
 @import "blocks/_nav.scss";
 @import "blocks/_redes_sociales.scss";
 
