--- a/css/sass/style.scss
+++ b/css/sass/style.scss
@@ -39,6 +39,7 @@ Text Domain: shbase
 @import "blocks/_cover.scss";
 @import "blocks/_blocks.scss";
 @import "blocks/_testimony.scss";
+@import "blocks/_text.scss";
 @import "blocks/_nav.scss";
 @import "blocks/_redes_sociales.scss";
 
