--- a/css/sass/style.scss
+++ b/css/sass/style.scss
@@ -22,10 +22,9 @@ Text Domain: shbase
 @import "support/_fonts.scss"; /* Open Sans */
 
 // Bootstrap Material Desing
-@import "support/bootstrap-material/_material.scss"; /* Bootstrap Material Desing */
-/* @import "support/bootstrap-material/_material-wfont.scss"; /* Bootstrap Material Desing */
-@import "support/bootstrap-material/_ripples.scss"; /* Bootstrap Material Desing */
-
+//@import "support/bootstrap-material/_material.scss"; /* Bootstrap Material Desing */
+//@import "support/bootstrap-material/_material-wfont.scss"; /* Bootstrap Material Desing */
+//@import "support/bootstrap-material/_ripples.scss"; /* Bootstrap Material Desing */
 
 /* Base
 ------------------------------------------*/
@@ -42,8 +41,6 @@ Text Domain: shbase
 @import "blocks/_text.scss";
 @import "blocks/_nav.scss";
 @import "blocks/_redes_sociales.scss";
-
-
 
 /* La personalización directa comienza aquí
 -------------------------------------------------------------- */
