--- a/css/sass/style.scss
+++ b/css/sass/style.scss
@@ -32,6 +32,10 @@ Text Domain: shbase
 @import "_header.scss";
 @import "_footer.scss";
 @import "_forms.scss";
+@import "_articulos.scss";
+@import "_post.scss";
+@import "_page.scss";
+@import "_sidebar.scss";
 
 /* Bloques 
 ------------------------------------------*/
