Nuevo footer y bloque con video bg

--- a/css/sass/style.scss
+++ b/css/sass/style.scss
@@ -97,6 +97,12 @@ Text Domain: shbase
 @import "blocks/_primal-contact.scss";
 @import "blocks/_complete-contact.scss";
 @import "blocks/_meteoro-contact.scss";
+
+/*--Bloque con video background*/
+@import "blocks/_video-background.scss";
+
+/*--Primal Footer*/
+@import "blocks/_primal-footer.scss";
 /* La personalización directa comienza aquí
 -------------------------------------------------------------- */
 
