--- a/css/sass/blocks/_filmstrip-slider.scss
+++ b/css/sass/blocks/_filmstrip-slider.scss
@@ -4,7 +4,28 @@
 		border: none; 
 		margin: 0; 
 
-		.flex-direction-nav a { overflow: visible; }
+		.flex-direction-nav {
+			
+			a {
+				font-size: 0;
+				display: block;
+				height: 100%;
+				top: 20px;
+				width: 80px;
+			}
+
+			.flex-prev {
+				left: 0 !important;
+				background-image: linear-gradient(to right, rgba(0, 0, 0, 0.5) 0px, transparent 100%);
+				background-repeat: repeat-x;
+			}
+
+			.flex-next {
+				right: 0 !important;
+				background-image: linear-gradient(to right, transparent 0px, rgba(0, 0, 0, 0.5) 100%);
+				background-repeat: repeat-x;
+			}
+		}
 
 		.FilmstripSlider-slide {
 			text-align: center;
