--- a/css/sass/blocks/_primal-slider.scss
+++ b/css/sass/blocks/_primal-slider.scss
@@ -11,6 +11,7 @@
 
 			.PrimalSlider-slideImagen {
 				width: 100%;
+				height: 100vh;
 			}
 
 			.PrimalSlider-slideCaption {
@@ -22,7 +23,7 @@
 				bottom: 0;
 				right: 0;
 				left: 0;
-				padding-bottom: 7rem;
+				padding-bottom: 4rem;
 				/* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#000000+0,000000+100&amp;0+0,1+100 */
 				background: -moz-linear-gradient(top,  rgba(0,0,0,0) 0%, rgba(0,0,0,1) 100%); /* FF3.6+ */
 				background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgba(0,0,0,0)), color-stop(100%,rgba(0,0,0,1))); /* Chrome,Safari4+ */
@@ -84,7 +85,7 @@
 
 
 		.flex-control-nav {
-			bottom: 3rem;
+			bottom: 1rem;
 			@media (max-width: $desktop-width) {
 				bottom: 0;
 			}
