--- a/css/sass/style.scss
+++ b/css/sass/style.scss
@@ -74,6 +74,8 @@ Text Domain: shbase
 @import "blocks/_nav.scss";
 @import "blocks/_redes_sociales.scss";
 
+@import "blocks/_card-testimony.scss";
+
 /*--Sliders*/
 @import "blocks/_primal-slider.scss";
 @import "blocks/_gallery-slider.scss";
@@ -105,4 +107,3 @@ Text Domain: shbase
 @import "blocks/_primal-footer.scss";
 /* La personalización directa comienza aquí
 -------------------------------------------------------------- */
-
