--- a/css/sass/blocks/_nav.scss
+++ b/css/sass/blocks/_nav.scss
@@ -4,7 +4,7 @@
 
 /* MainNavClasico */
 
-.primalMainNav {
+.mainNav {
 	display: block;
 	float: right;
 	margin: .5rem 1% 0;
@@ -21,6 +21,7 @@
 		display: block;
 		top: 0;
 		padding-bottom: 1.5rem;
+		margin: 0;
 	}
 	
 	/* Clase que se le agrega al nav cuando se hace scroll */
@@ -45,18 +46,103 @@
 
 		@media (max-width: $tablet-width) {
 			margin: 0;
-			padding: 1rem 0 0;
+			padding: 1.5rem 0 0;
 			width: 100% !important;
 			display: block;
 			list-style: none;
 			font-size: 1.1em;
 		}
 		&.activo {
+			
 			@media (max-width: $tablet-width) {
 				display: none;
 			}
 		}
+		
+		// Muestra cualquier submenú ul cuando se hace rollover sobre el contenedor
+		li:hover > ul {
+		    display: block;
+		}
+		
+		.sub-menu {
+			
+			@media (max-width: $tablet-width) {
+
+			}
+		}
+
+		.show-submenu {
+			transform: scale(1,1);
+			position: relative;	
+		}
+
+		// Estilo del submenú en popup
+		ul {
+			-moz-box-shadow: 0 3px 3px rgba(0,0,0,0.2);
+			-webkit-box-shadow: 0 3px 3px rgba(0,0,0,0.2);
+			box-shadow: 0 3px 3px rgba(0,0,0,0.2);
+			display: none;
+			float: left;
+			margin: 0 0 0 .25rem;
+			position: absolute;
+			top: 1.9em;
+			left: 0;
+			width: auto;
+			z-index: 99999;
+			opacity: 0.95;
+			padding: .5rem 0;
+			background: $main-color;
+		    filter: alpha(opacity=45); /* For IE8 and earlier */
+		    height: auto;
+		    @include transicion();
+
+		    @media (max-width: $tablet-width) {
+				width: 100%;
+				margin: 0;	
+				display: block;
+				top: 0;	
+				background: $main-color-dark;
+				transform: scale(0,0);
+				position: absolute;	
+			}
+			
+			a {
+				// background: $main-color;
+				border-bottom: 1px dotted #ddd;
+				border-radius: 0;
+				color: white;
+				font-size: .95em;
+				font-weight: normal;
+				height: auto;
+				line-height: 1.4em;
+				padding: 10px 10px;
+				width: 15rem;
+
+				@media (max-width: $tablet-width) {
+					width: 100%;
+					border-radius: 0;
+					margin: 0;
+				}
+
+			}
+			li:hover > a,
+			ul ul :hover > a,
+			a:focus {
+				background: $main-color-light;
+			}
+
+		    ul {
+		    	left: 100%;
+		    	top: 0;
+		    	margin:0;
+
+		    	@media (max-width: $tablet-width) {
+		    		display: none;
+		    	}
+		    }
+		}
 	}
+
 	li {
 		float: left;
 		position: relative;
@@ -68,6 +154,7 @@
 			border-bottom: #CCC 1px solid;
 		}
 	}
+
 	a {
 		color: $nav-text-color;
 		background-color: $nav-bg-text-color;
@@ -82,6 +169,12 @@
 
 		@media (max-width: 768px) {
 			height: 2.625em;
+		}
+
+		@media (max-width: $tablet-width) {
+			width: 100%;
+			border-radius: 0;
+			margin: 0;
 		}
 	}
 	a:hover,
