Remuevo lightbox y ACF del menu, habilito usuarios y agrego archivo utilidades.scss

--- a/css/sass/style.scss
+++ b/css/sass/style.scss
@@ -21,6 +21,7 @@ Text Domain: shbase
 @import "support/bootstrap-theme.scss"; /* Bootstrap Theme */
 @import "support/_fonts.scss"; /* Open Sans */
 @import "support/_flexslider.scss"; /* Flexslider 2 */
+@import "support/_utilidades.scss"; /* Clases utilitarias */
 
 /*imGrid plugin*/
 @import "support/imgrid/_imgrid.scss";
