Ajuste la URL del tema

--- a/css/sass/style.scss
+++ b/css/sass/style.scss
@@ -1,6 +1,6 @@
 /*
 Theme Name: SH Base
-Theme URI: http://www.solucioneshipermedia.com/nuestro-trabajo/
+Theme URI: http://www.solucioneshipermedia.com/portafolio/
 Author: Soluciones Hipermedia
 Author URI: http://www.solucioneshipermedia.com/
 Description: Tema base Wordpress para desarrollo de proyectos de Soluciones Hipermedia
